<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CowsBells</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="cowsBells">CowsBells Free Version</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="superHard">Super Hard</string>
    <string name="howToPlay">How To Play</string>

    <string name="guess">Guess:  </string>
    <string name="submit">Submit</string>
    <string name="newGame">New Game</string>

    <string name="numGuess">Number</string>
    <string name="guessSubmitted">Guess</string>
    <string name="cows">Cows</string>
    <string name="bells">Bells</string>
    <string name="cowsBellsRules">The object of this game is to guess the number in as few tries as possible.  Each number is used once.
    The Easy level is where you guess a four digit number.  Medium level is for a five digit number.  Hard level is for a six digit number.
    Super Hard is where you guess a seven digit number.  When a digit is among the digits in the number, it is scored as a "Cow."  When
    the digit is in the exact location, it is scored as a "Bell."</string>
    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id_prod">ca-app-pub-8379108590476103/4292186501</string>
    <string name="admob_app_id">ca-app-pub-8379108590476103~5473406230</string>
</resources>
