<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/row_layout"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
 
    <TextView
        android:id="@+id/txtNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/numGuess"
        android:layout_weight="1">
    </TextView>
     
    <TextView
        android:id="@+id/txtGuess"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/guessSubmitted"
        android:layout_weight="1">
    </TextView>
     
    <TextView
        android:id="@+id/txtCows"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cows"
        android:layout_weight="1">
    </TextView>
     
    <TextView
        android:id="@+id/txtBells"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bells"
        android:layout_weight="1">
    </TextView>
</LinearLayout>
