<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.danielburgnerjr.cowsbells.MainActivity" >

    <TextView
        android:id="@+id/textAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/cowsBells" />

    <Button
        android:id="@+id/btnEasy"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_below="@+id/textAppName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#000"
        android:text="@string/easy"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btnMedium"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_below="@+id/btnEasy"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#000"
        android:text="@string/medium"
        android:textColor="#fff" />
    
    <Button
        android:id="@+id/btnHard"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_below="@+id/btnMedium"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#000"
        android:text="@string/hard"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btnSuperHard"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_below="@+id/btnHard"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#000"
        android:text="@string/superHard"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btnHowToPlay"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_below="@+id/btnSuperHard"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#000"
        android:text="@string/howToPlay"
        android:textColor="#fff" />
    
</RelativeLayout>
