<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.danielburgnerjr.cowsbells.GameActivity" >

    <LinearLayout
        android:id="@+id/llGuess"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:layout_weight="0.5"
            android:textSize="22sp"
            android:text="@string/guess" />

        <EditText
            android:id="@+id/txtGuess"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:layout_weight="0.5"
            android:ems="10"
            android:textSize="14sp"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSubmitQuit"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_weight="0.5"
            android:onClick="submit"
            android:text="@string/submit"
            android:background="#000"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btnQuit"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_weight="0.5"
            android:onClick="newGame"
            android:text="@string/newGame"
            android:background="#000"
            android:textColor="#fff" />
    </LinearLayout>
    
	<LinearLayout
	    android:id="@+id/row_layout"
	    android:layout_height="fill_parent"
	    android:layout_width="fill_parent" >
	 
	    <TextView
	        android:id="@+id/FirstText"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/numGuess"
	        android:layout_weight="1">
	    </TextView>
	     
	    <TextView
	        android:id="@+id/SecondText"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/guessSubmitted"
	        android:layout_weight="1">
	    </TextView>
	     
	    <TextView
	        android:id="@+id/ThirdText"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/cows"
	        android:layout_weight="1">
	    </TextView>
	     
	    <TextView
	        android:id="@+id/FourthText"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/bells"
	        android:layout_weight="1">
	    </TextView>
	</LinearLayout>

	<LinearLayout
		android:id="@+id/row_layout1"
		android:layout_height="fill_parent"
		android:layout_width="fill_parent"
        android:orientation="horizontal" >

		<TextView
            android:layout_height="fill_parent"
            android:layout_width="fill_parent" />

        <TextView
            android:layout_height="fill_parent"
            android:layout_width="fill_parent" />

        <TextView
            android:layout_height="fill_parent"
            android:layout_width="fill_parent" />

        <TextView
            android:layout_height="fill_parent"
            android:layout_width="fill_parent" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
</LinearLayout>
